Add Core module and improve variable parsing
Introduces Core.cpp and Core.h for parsing and removing custom blocks from content. Refactors variable parsing in Vars.cpp to support block-based extraction and preprocessing, adds numeric expression evaluation, and improves content cleanup in the build process. Updates Utils with a file path parent utility and integrates new logic into xtml.cpp. Project files updated to include the new Core module.

--- a/xtml/xtml.vcxproj
+++ b/xtml/xtml.vcxproj
@@ -128,11 +128,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Core.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="Vars.cpp" />
     <ClCompile Include="xtml.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Core.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Vars.h" />
   </ItemGroup>
