--- a/xtml/xtml.vcxproj.filters
+++ b/xtml/xtml.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Core.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Include.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utils.h">
@@ -36,6 +39,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Core.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Include.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
