Add function registry and module system for extensible functions
Introduces a FunctionRegistry for registering and calling namespaced functions, a Module interface, and a standard module (ModuleStd) with common utility functions. Updates Vars and Core to support function expressions in variable evaluation. Adds Globals for global registry access and integrates function registration in main. Also includes error handling improvements and project file updates.

--- a/xtml/xtml.vcxproj
+++ b/xtml/xtml.vcxproj
@@ -129,14 +129,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Core.cpp" />
+    <ClCompile Include="FunctionRegistry.cpp" />
     <ClCompile Include="Include.cpp" />
+    <ClCompile Include="ModuleStd.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="Vars.cpp" />
     <ClCompile Include="xtml.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core.h" />
+    <ClInclude Include="FunctionRegistry.h" />
+    <ClInclude Include="Globals.h" />
     <ClInclude Include="Include.h" />
+    <ClInclude Include="Module.h" />
+    <ClInclude Include="ModuleStd.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Vars.h" />
   </ItemGroup>
