Add statement parsing and if/else logic to Core
Introduced Statements.cpp/h for parsing and evaluating conditional statements (if, else if, else) and logical operators. Core now splits and processes statements, supporting variable declarations and conditional branches. Updated project files to include the new Statements module.

--- a/xtml/xtml.vcxproj
+++ b/xtml/xtml.vcxproj
@@ -245,6 +245,7 @@
     <ClCompile Include="FunctionRegistry.cpp" />
     <ClCompile Include="Include.cpp" />
     <ClCompile Include="ModuleStd.cpp" />
+    <ClCompile Include="Statements.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="Vars.cpp" />
     <ClCompile Include="xtml.cpp" />
@@ -256,6 +257,7 @@
     <ClInclude Include="Include.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleStd.h" />
+    <ClInclude Include="Statements.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Vars.h" />
   </ItemGroup>
