--- a/xtml/xtml.vcxproj.filters
+++ b/xtml/xtml.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="ModuleStd.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Statements.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utils.h">
@@ -60,6 +63,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="ModuleStd.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Statements.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
