Introduce AST-based statement parsing and evaluation
Added ASTNode classes for representing and evaluating statements, refactored Core to use AST for parsing and building content, and replaced imperative statement parsing with AST construction. Updated statement and utility functions to support AST workflow, improving extensibility and maintainability of the interpreter.

--- a/xtml/xtml.vcxproj
+++ b/xtml/xtml.vcxproj
@@ -241,6 +241,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ASTNode.cpp" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="FunctionRegistry.cpp" />
     <ClCompile Include="Include.cpp" />
@@ -251,6 +252,7 @@
     <ClCompile Include="xtml.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ASTNode.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="FunctionRegistry.h" />
     <ClInclude Include="Globals.h" />
