--- a/xtml/xtml.vcxproj.filters
+++ b/xtml/xtml.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Statements.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="ASTNode.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utils.h">
@@ -66,6 +69,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Statements.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="ASTNode.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
